2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.82 released.

        * Fixed bug when using with FullAuto introduced with
          recent changes.


2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.81 released.

        * New ITEM LEVEL Select element. See POD documentation
          for details.

        * New Mark element. See POD documentation
          for details.


2011-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.80 released.

        * New recursive support added. See POD documentation
          for details.


2011-03-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.79 released.

        * Fixed issue when user moved back to parent menu
          and makes different selection than previously


2011-03-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.78 released.

        * Updated POD documentation to include new instructions
          on how to pass multiple selections to sub menus, and
          use anonymous subroutines or closures with macros to
          transform those selections before presenting them to
          user in the next layer menuing.


2011-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.77 released.

        * Fixed '$numbor' accuracy when storing in FullAuto Plan.


2011-02-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.76 released.

        * Put in test for HASH ref for Module Conditional. Installation
          was broken in Ubuntu with new 'use strict' pragma in use.


2011-02-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.75 released.

        * Fixed %Config::Config is read-only bug that was
          breaking CPAN testing reports.


2011-02-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.74 released.
