@@ -1,3 +1,10 @@
+2011-06-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.83 released.
+
+        * Fixes to navigation with recursive menus.
+
+
 2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.82 released.
